--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "mongoose": "^4.13.2",
     "node-uuid": "^1.4.8",
     "popper.js": "^1.12.7",
-    "save": "^2.3.1"
+    "save": "^2.3.1",
+    "uuid": "^3.1.0"
   }
 }
